refactor: Added mobile and hash change watches Function in illustration, design, and app compenent have a hashchange watch. If hash changes, it will go to the proper page If user is on a mobile phone with a back button, a hash event is added to the url for the image preview. The X button is no longer present If the hash changes (back button is hit) the close function is called for the image preview Successfully creates smooth navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,6 @@
 <app-main [iState]="iState"
           [dState]="dState"
           [wState]="wState"
-          [aState]="aState"></app-main>
+          [aState]="aState"
+          (window:hashchange)="onChangeHash($event)"></app-main>
 <app-footer></app-footer>
