--- a/src/app/illustration/illustration.component.html
+++ b/src/app/illustration/illustration.component.html
@@ -1,4 +1,6 @@
-<article [@preview-container]="doodles.length+inks.length+colorPencil.length+characterStudy.length" (window:resize)="onResize($event)">
+<article    [@preview-container]="doodles.length+inks.length+colorPencil.length+characterStudy.length"
+            (window:resize)="onResize($event)"
+            (window:hashchange)="onChangeHash($event)">
     <h3>Inks</h3>
     <section id="sec-i-inks" class="collection-container">
         <div id="div_ink_{{i}}"
@@ -9,8 +11,7 @@
                     id = "figure_ink_{{i}}">
               <img  alt   = "{{ink.alt}}"
                     id    = "img_ink_{{i}}"
-                    srcset="{{imagePath}}{{ink.name}}-200{{ink.fileType}} 400w,
-                            {{imagePath}}{{ink.name}}-400{{ink.fileType}} 600w,
+                    srcset="{{imagePath}}{{ink.name}}-400{{ink.fileType}} 600w,
                             {{imagePath}}{{ink.name}}-600{{ink.fileType}} 800w,
                             {{imagePath}}{{ink.name}}-800{{ink.fileType}} 1000w,
                             {{imagePath}}{{ink.name}}-1100{{ink.fileType}}"
@@ -40,8 +41,7 @@
                     id = "figure_doodle_{{i}}">
               <img  alt   = "{{doodle.alt}}"
                     id    = "img_doodle_{{i}}"
-                    srcset="{{imagePath}}{{doodle.name}}-200{{doodle.fileType}} 400w,
-                            {{imagePath}}{{doodle.name}}-400{{doodle.fileType}} 600w,
+                    srcset="{{imagePath}}{{doodle.name}}-400{{doodle.fileType}} 600w,
                             {{imagePath}}{{doodle.name}}-600{{doodle.fileType}} 800w,
                             {{imagePath}}{{doodle.name}}-800{{doodle.fileType}} 1000w,
                             {{imagePath}}{{doodle.name}}-1100{{doodle.fileType}}"
@@ -71,8 +71,7 @@
                     id = "figure_pencil_{{i}}">
               <img  alt   = "{{pencil.alt}}"
                     id    = "img_pencil_{{i}}"
-                    srcset="{{imagePath}}{{pencil.name}}-200{{pencil.fileType}} 400w,
-                            {{imagePath}}{{pencil.name}}-400{{pencil.fileType}} 600w,
+                    srcset="{{imagePath}}{{pencil.name}}-400{{pencil.fileType}} 600w,
                             {{imagePath}}{{pencil.name}}-600{{pencil.fileType}} 800w,
                             {{imagePath}}{{pencil.name}}-800{{pencil.fileType}} 1000w,
                             {{imagePath}}{{pencil.name}}-1100{{pencil.fileType}}"
@@ -102,8 +101,7 @@
                           id = "figure_study_{{i}}">
                     <img  alt   = "{{study.alt}}"
                           id    = "img_study_{{i}}"
-                          srcset="{{imagePath}}{{study.name}}-200{{study.fileType}} 400w,
-                                  {{imagePath}}{{study.name}}-400{{study.fileType}} 600w,
+                          srcset="{{imagePath}}{{study.name}}-400{{study.fileType}} 600w,
                                   {{imagePath}}{{study.name}}-600{{study.fileType}} 800w,
                                   {{imagePath}}{{study.name}}-800{{study.fileType}} 1000w,
                                   {{imagePath}}{{study.name}}-1100{{study.fileType}}"
