--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -27,10 +27,15 @@ header{
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: flex-start;  @include vendor-prefix('animation', 'fadein .3s ease-in-out');
   h1{
     font-family: 'Courgette', cursive;
     padding: .5rem 0 0 0;
     text-shadow: 0 0 .05em $ich-color;
   }
+}
+
+@keyframes fadein {
+  0%    { opacity: 0; }
+  100%  { opacity: 1; }
 }
