--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -27,7 +27,7 @@ header{
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  justify-content: flex-start;  @include vendor-prefix('animation', 'fadein .3s ease-in-out');
+  justify-content: flex-start;
   h1{
     font-family: 'Courgette', cursive;
     padding: .5rem 0 0 0;
@@ -35,7 +35,11 @@ header{
   }
 }
 
-@keyframes fadein {
+#site-header{
+  @include vendor-prefix('animation', 'fadeinheader .7s ease-in-out');
+}
+
+@keyframes fadeinheader {
   0%    { opacity: 0; }
   100%  { opacity: 1; }
 }
