--- a/src/app/design/design.component.scss
+++ b/src/app/design/design.component.scss
@@ -165,6 +165,23 @@ $sbsize: 90vw;
   }
 }
 
+.section-title{
+  text-align: center;
+  font-size: 3em;
+  @include vendor-prefix('animation', 'slideindesign 1.7s cubic-bezier(.61,.18,.69,1), fadeindesign 1.4s linear');
+}
+
+@keyframes slideindesign {
+  0%    { @include vendor-prefix('transform', 'translateX(-100%)'); }
+  100%  { @include vendor-prefix('transform', 'translateX(0%)');  }
+}
+
+@keyframes fadeindesign {
+  0%    { opacity: 0; }
+  99%   { opacity: 0; }
+  100%  { opacity: 1; }
+}
+
 @media screen and (max-width: 920px){
   .collection-container{
     div{
