--- a/src/app/illustration/illustration.component.html
+++ b/src/app/illustration/illustration.component.html
@@ -1,7 +1,7 @@
 <article    [@preview-container]="doodles.length+inks.length+colorPencil.length+characterStudy.length"
             (window:resize)="onResize($event)"
             (window:hashchange)="onChangeHash($event)">
-    <h3>Inks</h3>
+    <h3 class="section-title">Inks</h3>
     <section id="sec-i-inks" class="collection-container">
         <div id="div_ink_{{i}}"
             class  = "lbclosed"
@@ -31,7 +31,7 @@
                 </figcaption>
         </div>
       </section>
-      <h3>BW Doodles</h3>
+      <h3 class="section-title">BW Doodles</h3>
       <section id="sec-i-doodles" class="collection-container">
         <div id="div_doodle_{{i}}"
             class  = "lbclosed"
@@ -61,7 +61,7 @@
                 </figcaption>
         </div>
       </section>
-      <h3>Color Doodles</h3>
+      <h3 class="section-title">Color Doodles</h3>
       <section id="sec-i-pencils" class="collection-container">
         <div id="div_pencil_{{i}}"
             class  = "lbclosed"
@@ -91,7 +91,7 @@
                 </figcaption>
         </div>
       </section>
-      <h3>Character Studies</h3>
+      <h3 class="section-title">Character Studies</h3>
       <section id="sec-i-characters" class="collection-container">
               <div id="div_study_{{i}}"
                   class  = "lbclosed"
