--- a/src/app/design/design.component.scss
+++ b/src/app/design/design.component.scss
@@ -2,6 +2,10 @@
 $bg-color: #26293a;
 $menu-open-color: #a2a2aa;
 $menu-close-color: #fff;
+$bg-color: #21295C;
+$ich-color: #66c7f4;
+$ica-color: #e52d6b;
+$ic-color: #48494c;
 $xlbsize: 20vw;
 $lbsize: 30vw;
 $mbsize: 45vw;
@@ -101,6 +105,13 @@ $sbsize: 90vw;
       flex-flow: column nowrap;
       overflow: auto;
       padding: 2.2rem 1.3rem;
+      color: $ic-color;
+      p, h2{
+        color: $ic-color;
+      }
+      p{
+        margin: 1rem 0;
+      }
     }
   }
   .lbclosed{
@@ -206,5 +217,40 @@ $sbsize: 90vw;
       width: $sbsize;
       height: $sbsize;
     }
+  }
+}
+
+.optional-links{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  color: $ic-color;
+  nav{
+    font-size: 1.4em;
+    margin: 0 .3rem;
+    display: block;
+    transition: all .1s ease-in-out;
+    color: $ic-color;
+      a{ color: $ic-color; }
+      i {
+        @include vendor-prefix('transition', 'all .1s ease-in-out');
+        margin: 0.5rem 1rem 0 0;
+      }
+      a:hover{
+        color: $ich-color;
+        i{
+          transform: scale(1.3) translate(-.2em, 0);
+        }
+      }
+      a:active{
+        color: $ica-color;
+        i{
+          transform: scale(1.5) translate(-.2em, 0);
+        }
+      }
+  }
+  small{
+    color: $ic-color;
   }
 }
