--- a/src/app/webdev/webdev.component.html
+++ b/src/app/webdev/webdev.component.html
@@ -22,7 +22,13 @@
             </a>
             <figcaption>
               <h2>{{site.title}}</h2>
-              <small>&copy;{{site.date * 1000 | date: 'MM/dd/yyyy'}}</small>
+              <section class="optional-links">
+                <nav>
+                  <a href="{{site.github}}" target="_blank" *ngIf="site.github"><i class="fab fa-github"></i></a>
+                  <a href="{{site.link}}" target="_blank" *ngIf="site.link"><i class="fas fa-share-square"></i></a>
+                </nav>
+                <small>&copy;{{site.date * 1000 | date: 'MM/dd/yyyy'}}</small>
+              </section>
             </figcaption>
       </div>
     </section>
@@ -49,7 +55,13 @@
           </a>
           <figcaption>
             <h2>{{page.title}}</h2>
-            <small>&copy;{{page.date * 1000 | date: 'MM/dd/yyyy'}}</small>
+            <section class="optional-links">
+              <nav>
+                <a href="{{page.github}}" target="_blank" *ngIf="page.github"><i class="fab fa-github"></i></a>
+                <a href="{{page.link}}" target="_blank" *ngIf="page.link"><i class="fas fa-share-square"></i></a>
+              </nav>
+              <small>&copy;{{page.date * 1000 | date: 'MM/dd/yyyy'}}</small>
+            </section>
           </figcaption>
       </div>
     </section>
