--- a/src/app/webdev/webdev.component.scss
+++ b/src/app/webdev/webdev.component.scss
@@ -8,6 +8,11 @@ $mbheight: 25.3125vw;
 $sbwidth: 90vw;
 $sbheight: 50.625vw;
 
+$bg-color: #21295C;
+$ich-color: #66c7f4;
+$ica-color: #e52d6b;
+$ic-color: #ffffff;
+
 /*courtesy of Rimian and Alex Guerrero, July 1, 2013, from https://stackoverflow.com/questions/12788262/sass-browser-vendor-prefixes#17399532
 /* ~~ vendor prefix formula ~~ */
 
@@ -107,4 +112,39 @@ $sbheight: 50.625vw;
   0%    { opacity: 0; }
   99%   { opacity: 0; }
   100%  { opacity: 1; }
+}
+
+.optional-links{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  color: $ic-color;
+  nav{
+    font-size: 1.4em;
+    margin: 0 .3rem;
+    display: block;
+    transition: all .1s ease-in-out;
+    color: $ic-color;
+      a{ color: $ic-color; }
+      i {
+        @include vendor-prefix('transition', 'all .1s ease-in-out');
+        margin: 0.5rem 1rem 0 0;
+      }
+      a:hover{
+        color: $ich-color;
+        i{
+          transform: scale(1.3) translate(-.2em, 0);
+        }
+      }
+      a:active{
+        color: $ica-color;
+        i{
+          transform: scale(1.5) translate(-.2em, 0);
+        }
+      }
+  }
+  small{
+    color: $ic-color;
+  }
 }
