refactor: added linkedin link/icon

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,6 +6,7 @@
   <nav id="social-footer">
       <ul>
         <li><a href="https://github.com/booellean" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="https://linkedin.com/in/elle-pope-dev/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
         <li><a href="https://booellean.tumblr.com/" target="_blank"><i class="fab fa-tumblr-square"></i></a></li>
         <li><a href="https://www.instagram.com/boobitters/" target="_blank"><i class="fab fa-instagram"></i></a></li>
         <li><a href="https://twitter.com/boobitters" target="_blank"><i class="fab fa-twitter"></i></a></li>
