--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,30 @@
-<p>
-  about works!
-</p>
+<article  id="about">
+  <section>
+      <figure id="profile-pic">
+        <img  alt   = "{{profile.alt}}"
+              id    = "img_profile_{{i}}"
+              srcset="{{imagePath}}{{profile.name}}-400{{profile.fileType}} 600w,
+                      {{imagePath}}{{profile.name}}-600{{profile.fileType}} 800w,
+                      {{imagePath}}{{profile.name}}-800{{profile.fileType}} 1000w,
+                      {{imagePath}}{{profile.name}}-1100{{profile.fileType}}"
+                sizes="(max-width: 400px) 400px,
+                      (max-width: 600px) 600px,
+                      (max-width: 800px) 800px,
+                      1100px"
+                src="{{imagePath}}{{profile.name}}-1100{{profile.fileType}}"
+                data-name="{{profile.show}}" >
+      </figure>
+      <figcaption>
+        <p>{{profile.title}}</p>
+      </figcaption>
+    </section>
+    <p>What's there to say that hasn't been said? Whenever I describe myself, I ask a lot of questions, such as what aspects of my personality are most valued, can I ever start a narrative without first asking a question, will this sound playful or self demeaning? Playful; it definitely sounds playful.</p>
+
+    <p>Currently, I am volunteering for a non-profit organization <a href="https://www.noschoolviolence.org" target="_blank">NoSchoolViolence</a> (NSV) as the frontend development lead. NSV's mission is to reduce the amount of violence in our schools using data analytics. In collecting data from scholarly journals and youth violence reporting, we are building datasets that paint a narrative of which behaviors (when combined together) may lead to severe acts of violence. We are using the same methodologies of social media and commerical data collection normally reserved for commercial reasons to help predict social patterns.</p>
+
+    <p>Before I came on, NSV had lost their long-term frontend developer, and the organization did not have a direction for UI, application development, or database structure. The other team leads and I were able to redirect the organization's managerial practices and build a solid development team. A big part of my duties include directing our frontend team, analyzing the programmatic and communicative needs of our applications, and overseeing activity on the Azure Portal.</p>
+
+    <p>I also have a partnership business <a href="http://www.polyentertainment.com/" target="_blank">Poly entertainment</a>, which as it's name implies is a multi-faceted media company that values diversity. The mission of Poly entertainment is to fund and distribute any Multi-media Information Systems (as we dub MmISS) that is often overlooked in the eyes of big industry publishers. This content includes but is not limited to communities of LGBTQ+, people of color, and multicultural values. Our goal is to not dictate how this content is delivered, and to provide an environment where understanding and open discussion is valued. This is, of course, a slow process and Poly entertainment will not independently publish for another two years.</p>
+
+    <p>Beyond that, I am just a human doing its best like everyone else. I will continue my humanitarian efforts until I'm blue in the face, which will be easy for me beacuase fun fact, I also have <a href="https://wwww.mayoclinic.org/diseases-conditions/raynauds-disease/symptoms-causes/syc-20363571" target="_blank">Raynaud's</a>.</p>
+</article>
